@@ -216,7 +216,6 @@ div.main-right div.main-status a {\n
 }\n
 \n
 .listbox th {\n
-  border-left: 1px solid #bbccff;\n
   border-right: 1px solid #bbccff;\n
 }\n
 \n
